perf: refactoring